Added map.p back to repo to avoid version incompatibility

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ################
 ## Temp stuff
 ################
-map.p
+#map.p - temporarily removing this to avoid problems with
+#        version incompatibility
 
 #################
 ## Eclipse
