Map changes Removed map from set Switched back to pickle from cPickle

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 ################
 ## Temp stuff
 ################
-#map.p - temporarily removing this to avoid problems with
-#        version incompatibility
+map.p
 
 #################
 ## Eclipse
